# LLMOptimization

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  certify_your_model.md  ci_integration.md  cloud_notebooks.md  compare_with_vllm.md  cutile_backend.md  hf_adapter_limitations.md  kernel_policy_decision_table.md  known_limitations.md  production_checklist.md  production_integration_guide.md  quickstart_5_minutes.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.1.md  stable_today.md  stable_vs_experimental.md  versioning.md  vllm_vs_llm_memlab.md
examples/: benchmark_dashboard_example.py  cloud_smoke.py  deep_debug_report.py  drift_debugger_example.py  fused_decode_benchmark.py  hf_suite_example.py  kernel_bench.py  memory_first_generate.py  memory_policy_example.py  profile_registry_workflow.py  quick_estimate.py  regression_benchmark_ci.py  serving_vllm_baseline.py  torch_trace_tiny.py
notebooks/: colab_quickstart.ipynb  kaggle_quickstart.ipynb
src/llm_memlab/: __init__.py  (+50 more)
tests/: README.md  test_api_polish.py  test_attention_debugger.py  test_backend_registry.py  test_benchmark.py  test_benchmark_store.py  test_benchmark_store_v2.py  test_benchmark_suite.py  test_compare_report.py  test_cuda_triton.py  test_cutile_backend.py  test_deep_debugger.py  test_drift_debugger.py  test_estimates.py  test_generalization.py  test_hf_adapter.py  test_hf_cache.py  test_hf_cache_certification.py  test_hf_integration_matrix.py  test_html_report.py  test_inspector.py  test_ir_planner.py  test_kernel_certification.py  test_kernels.py  test_kv_cache.py  test_kv_quality.py  test_memory_policy.py  test_modules.py  test_notebook_docs.py  test_oom_runner.py  test_patchers.py  test_production_hardening_v2.py  test_production_matrix_dashboard.py  test_quality_metrics.py  test_report.py  test_runtime_v3.py  test_torch_debugger.py  test_vllm_serving.py
(+4 files in other folders)
