[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-memlab"
version = "0.1.0"
description = "Memory-first LLM analysis toolkit with PyTorch-compatible tracing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PF26" }]
license = { text = "MIT" }
keywords = ["llm", "memory", "pytorch", "debugger", "optimizer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
torch = ["torch"]
triton = ["triton"]
transformers = ["transformers"]
dev = ["pytest"]

[project.scripts]
llm-memlab = "llm_memlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

