[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-memlab"
version = "0.1.0"
description = "Memory-first LLM analysis toolkit with PyTorch-compatible tracing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "thhanabun" }]
license = "MIT"
keywords = ["llm", "memory", "pytorch", "debugger", "optimizer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
torch = ["torch"]
triton = ["triton"]
transformers = ["transformers"]
dev = ["pytest", "ruff", "mypy", "build", "torch"]

[project.scripts]
llm-memlab = "llm_memlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_defs = true
check_untyped_defs = false
warn_unused_ignores = false
no_implicit_optional = false
